# plannipoker

./: .gitignore  LICENSE  README.md  README.old.md  package.json  tsconfig.json  tsconfig.prod.json  tslint.json
backend/: .dockerignore  Cargo.toml  Dockerfile  Makefile
backend/src/: main.rs
frontend/: .eslintrc  Dockerfile  Makefile  package-lock.json  package.json  snowpack.config.js  tailwind.config.js
frontend/docker/: nginx.conf
frontend/src/: App.css  App.svelte
public/: index.html
server/: actions.js  actions.ts  index.js  index.ts  tsconfig.json
server/models/: card.ts  game.ts  index.ts  player.ts  story.ts  vote.ts
src/: App.css  App.js  actions.js  actions.ts  game.js  home.js  index.js  index.tsx  registerServiceWorker.ts
src/Components/Card/: index.css  index.js  index.tsx
src/Components/Drawer/: index.tsx
src/Components/EditableLabel/: index.tsx
src/Components/Input/: index.js  index.tsx
src/Components/UserList/: index.js  index.tsx
src/Game/: deck.tsx  drawer.tsx  index.js  index.tsx  no-story.tsx  players.tsx  stories.js  stories.tsx  story.tsx
src/Home/: index.tsx
src/Layout/: header.js  header.tsx  index.js  index.tsx
src/models/: card.ts  game.ts  player.ts  story.ts  vote.ts
src/store/: api.js  api.ts  index.js  index.ts  socket.js  socket.ts
