[package]
name = "plannipoker"
version = "0.1.0"
authors = ["Antoine Jaussoin <antoine@jaussoin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.6", features = ["full"] }
actix-web = "3.0"
actix-multipart = "0.3.0"
